# ai

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  ishell.py  main.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  shell.py  sonar-project.properties  start-local.sh  start.sh  tasks.py  test.py  tox.ini
.github/workflows/: check.yml  ci.yml  deploy-and-release.yml  deploy.yml  quality-check.yml
ai/: __init__.py
ai/agents/: simple_agents.py
ai/api/: __init__.py  agent.py  blog.py  contact.py  llm.py  llm_data.py  rest.py  s3.py  workflow.py  workflow_execute.py  workflow_history.py  workflow_node.py  workflows.py
ai/apis/: __init__.py  ai_messages.py  blog.py  links.py  rest.py  s3.py  workflow.py  workflow_execute.py  workflow_node.py
ai/common/: __init__.py  exceptions.py
ai/config/: __init__.py  env.py
ai/data/resume/: data.txt
ai/data/website/: data.txt
ai/enum/: __init__.py  llm.py
ai/exceptions/: exception.py  exceptions.py
ai/llms/: __init__.py  deepseek.py  google.py  ollama.py
ai/managers/: __init__.py
ai/managers/ai_message_manager/: ai_message_manager.py
ai/managers/aws/: session.py
ai/managers/db_manager/: db_manager.py
ai/managers/db_service_manager/: db_service_manager.py
ai/managers/link_manager/: link_manager.py
ai/managers/s3_manager/: s3_manager.py
ai/managers/scheduler_process_manager/: scheduler_process_manager.py
ai/managers/workflow_execute_manager/: workflow_execute_manager.py
ai/managers/workflow_manager/: workflow_execute_manager.py  workflow_manager.py  workflow_node_manager.py
ai/managers/workflow_node_manager/: workflow_node_manager.py
ai/model/: __init__.py  ai_message.py  base_db.py  base_model.py  blog.py  contact.py  enums.py  health.py  link.py  llm.py  other.py  others.py  output.py  request.py  s3.py  s3_item.py  scheduler_process.py  service.py  workflow.py
ai/services/: __init__.py  contact_service.py
ai/services/agent_service/: agent_service.py
ai/services/blog_service/: blog_service.py
ai/services/contact_service/: contact_db_model.py  contact_service.py
ai/services/execute_workflow_service/: execute_workflow_service.py
ai/services/link_service/: link_service.py
ai/services/llm_execute/: llm_execute_service.py
ai/services/llm_service/: llm_execute_service.py  llm_service.py  openai.py
ai/services/s3_service/: s3_service.py
ai/services/service/: ai_message.py  ai_message_service.py  batch_process_service.py  db_service.py  health_service.py  link_service.py  scheduler_process_service.py  service.py  structured_output_service.py
ai/services/tool_service/: tool_service.py
ai/services/workflow/: workflow_service.py
ai/services/workflow_history_service/: workflow_history_service.py
ai/services/workflow_service/: execute_workflow_service.py  workflow_data.py  workflow_node_service.py  workflow_service.py
ai/services/workflow_types/: execute_workflow_creator_types.py
ai/tasks/: __init__.py  execute_workflow_node_task.py  scheduler_task.py
ai/tests/: conftest.py
ai/tests/api/: test_error_handling.py  test_links.py  test_rest.py  test_workflow_history.py
ai/tests/factory/: ai_message.py  link.py  workflow.py
ai/tests/managers/: test_db_manager.py  test_workflow_manager.py
ai/tests/services/: test_ai_service.py  test_execute_workflow_service.py  test_link_service.py  test_llm_execute_service.py  test_workflow_node_service.py  test_workflow_service.py
ai/tools/: __init__.py
ai/tools/multiply/: multiply.py
ai/tools/save_notes/: save_notes.py
ai/tools/save_to_db/: save_to_db.py
ai/tools/save_to_s3/: save_to_s3.py
ai/utilities/: __init__.py
ai/utilities/append_to_file/: append_to_file.py
ai/utilities/created_date/: created_date.py
ai/utilities/function_cache/: __init__.py  cache_decorator.py
ai/utilities/get_data_path/: get_data_path.py
ai/utilities/read_from_file/: read_from_file.py
ai/utilities/timing/: __init__.py  advanced_timing.py  (+1 more)
ai/workflows/: __init__.py
scripts/: pre-push-check.sh
tests/: conftest.py
tests/api/: test_workflow.py  test_workflow_history.py
(+15 files in other folders)
