[tool.poetry]
name = "ai"
version = "0.0.13"
description = "This is AI Agent"
authors = ["Vimal Menon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.19"
pydantic = "^2.10.6"
langchain-google-genai = "^2.0.10"
langchain-deepseek = "^0.1.2"
fastapi = {extras = ["standard"], version = "^0.115.11"}
boto3 = "^1.37.8"
langchain-ollama = "^0.3.0"
langgraph = "^0.4.7"
langgraph-supervisor = "^0.0.27"
langsmith = "^0.3.43"
pyhumps = "^3.8.0"
humps = "^0.2.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.1.2"
isort = "^6.0.0"
autoflake = "^2.3.1"
boto3-stubs = "^1.37.9"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-faker = "^2.0.0"
tox = "^4.26.0"
ruff = "^0.11.12"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "main:run"
