[tool.poetry]
name = "ai"
version = "0.0.19"
description = "This is AI Agent"
authors = ["Vimal Menon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.19"
pydantic = "^2.10.6"
langchain-google-genai = "^2.0.10"
langchain-deepseek = "^0.1.2"
boto3 = "^1.37.8"
langchain-ollama = "^0.3.0"
pyhumps = "^3.8.0"
humps = "^0.2.2"
langsmith = "^0.4.4"
langchain-community = "^0.3.27"
langchain-google-community = "^2.0.7"
fastapi = {extras = ["standard"], version = "^0.116.0"}
langchain-openai = "^0.3.28"
elevenlabs = "^2.7.1"
celery = {extras = ["sqs"], version = "^5.5.3"}
langgraph = "^0.6.0"
langgraph-supervisor = "^0.0.29"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.1.2"
isort = "^6.0.0"
autoflake = "^2.3.1"
boto3-stubs = "^1.37.9"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-faker = "^2.0.0"
pytest-env = "^1.1.5"
ruff = "^0.12.2"
tox = "4.27"
celery-stubs = "^0.1.3"
types-python-jose = "^3.5.0.20250531"
types-requests = "^2.32.4.20250611"
moto = "^5.1.9"
pytest-cov = "^6.2.1"
factory-boy = "^3.3.3"
pytest-factoryboy = "^2.8.1"
pytest-watch = "^4.2.0"
pytest-xdist = "^3.8.0"
deadcode = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "main:run"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=ai",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
testpaths = ["ai/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["ai"]
